# githem

./: Cargo.toml  Dockerfile  README.md  compose.yaml  current_error.txt
.github/workflows/: assistant.yaml  deploy-get.yaml  deploy.yaml  release-aur.yaml  release.yaml  security.yaml
api/: Cargo.toml
api/src/: cache.rs  http.rs  ingestion.rs  lib.rs  main.rs  metrics.rs  websocket.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
core/: Cargo.toml
core/src/: cache.rs  filtering.rs  ingester.rs  lib.rs  parser.rs
frontend/: Cargo.toml  analytics
frontend/assets/: tailwind.css
frontend/src/: api.rs  main.rs  types.rs
frontend/src/components/: content_view.rs  control_panel.rs  file_tree.rs  mod.rs  raw_view.rs
frontend/src/views/: home.rs  layout.rs  mod.rs  repository.rs
get/: compose.yaml  haproxy.example  install.sh  nginx.conf
get/aur/: .SRCINFO  PKGBUILD  submit.sh  update.sh
get/install/: install.ps1  install.sh
get/web/: globals.css  help.html  index.html  style.css  styles.css
