[workspace]
members = ["core", "cli", "api"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rotko Networks <hq@rotko.net>"]
license = "MIT"
repository = "https://github.com/rotko/githem"
homepage = "https://rotko.net"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
git2 = "0.20"
uuid = { version = "1.10", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-br", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2.14"
futures = "0.3"
html-escape = "0.2"
url = "2.5"
tower_governor = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
