[package]
name = "githem-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "githem-api"
path = "src/main.rs"

[dependencies]
githem-core = { path = "../core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
html-escape = { workspace = true }
url = { workspace = true }
#axum = { workspace = true, features = ["ws"] }
axum = { version = "0.7", features = ["ws"] }
tower_governor = "0.4"
uuid = "1"
fastrand = "2.3"
rand = "0.8"
