[package]
name = "githem-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "githem-api"
path = "src/main.rs"

[features]
default = []
rate-limit = ["dep:tower_governor"]

[dependencies]
githem-core = { path = "../core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
html-escape = { workspace = true }
url = { workspace = true }
axum = { workspace = true }
rand = { workspace = true }

# Optional rate limiting
tower_governor = { version = "0.4", optional = true }
