[package]
name = "githem-api"
description = "Githem API server - Git repository hosting service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "githem-api"
path = "src/main.rs"

[features]
default = []
rate-limit = ["dep:tower_governor"]

[dependencies]
githem-core = { version = "0.5.0", path = "../core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
html-escape = { workspace = true }
url = { workspace = true }
axum = { workspace = true }
rand = { workspace = true }

# Optional rate limiting
tower_governor = { version = "0.7", optional = true }
tempfile = "3.8"
sha2 = "0.10"
