[package]
name = "githem"
description = "Githem CLI - Git repository management tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "githem"
path = "src/main.rs"

[dependencies]
githem-core = { version = "0.4.0", path = "../core" }
anyhow = { workspace = true }
clap = { workspace = true }
git2 = { workspace = true }
