[package]
name = "githem-core"
description = "Core library for Githem - Git repository management and hosting"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
git2 = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
libc = { workspace = true }
walkdir = { workspace = true }
sha2 = "0.10"
bincode = "1.3"
serde_json = { workspace = true }
