[package]
name = "githem-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6", features = ["fullstack", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
gloo-storage = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "Location", "Storage", "Navigator", "Clipboard"] }
futures = "0.3"

# Server dependencies
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:axum", "dep:tokio"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
